Refactoring, first attempt

--- a/AlbertSavesThePlanets2UDPReceiverAndSignalRSender.csproj
+++ b/AlbertSavesThePlanets2UDPReceiverAndSignalRSender.csproj
@@ -182,6 +182,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="SignalRHandler.cs" />
+    <Compile Include="UDPReceiver.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
